--- a/app/webwidget-balesin.css
+++ b/app/webwidget-balesin.css
@@ -1,41 +1,41 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800|Satisfy);
 
-mybot{
+widgetbalesin{
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
 }
 
-mybot img {
+widgetbalesin img {
   -webkit-user-drag: none;
   -moz-user-drag: none;
   -khtml-user-drag: none;
 }
 
-mybot a,
-mybot a:hover,
-mybot a:focus {
+widgetbalesin a,
+widgetbalesin a:hover,
+widgetbalesin a:focus {
   text-decoration: none;
   outline: none;
 }
 
-mybot .width100 {
+widgetbalesin .width100 {
   width: 100%;
 }
 
-mybot .text-center {
+widgetbalesin .text-center {
   text-align: center;
 }
 
-mybot .container {
+widgetbalesin .container {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
 
-mybot .form-control {
+widgetbalesin .form-control {
   display: block;
   width: 100%;
   height: 34px;
@@ -47,20 +47,20 @@ mybot .form-control {
 
 /* General end*/
 
-/* MyBot */
-mybot.center .chatCont,
-mybot.center .profile_div {
+/* widgetbalesin */
+widgetbalesin.center .chatCont,
+widgetbalesin.center .profile_div {
   left: 0;
   right: 0;
   margin: 0 auto;
 }
 
-mybot.left .chatCont,
-mybot.left .profile_div {
+widgetbalesin.left .chatCont,
+widgetbalesin.left .profile_div {
   left: 0;
 }
 
-mybot .chatCont {
+widgetbalesin .chatCont {
   position: fixed;
   width: 400px;
   height: 500px !important;
@@ -75,39 +75,53 @@ mybot .chatCont {
   background-position: center bottom;
 }
 
-mybot .close {
-  color: #868686;
+widgetbalesin .close {
+  color: #333;
   font-size: 18px;
   cursor: pointer;
   position: relative;
-  top: 10px;
+  top: 12px;
+  box-shadow: 0 0 0 #333;
 }
 
-mybot .bot_profile {
+widgetbalesin .bot_profile {
+  /* background: #ffdd00; */
   text-align: left;
   width: 100%;
   display: none;
   z-index: 1000;
-  background: #ffdd00;
   max-height: 60px;
+  box-shadow: 0 4px 15px -8px rgba(0,0,0,0.3);
+  border-bottom: 1px solid #ccc;
+  background: #feb645;
+  background: -moz-linear-gradient(-45deg, #feb645 0%, #f1e767 100%);
+  background: -webkit-linear-gradient(-45deg, #feb645 0%,#f1e767 100%);
+  background: linear-gradient(135deg, #feb645 0%,#f1e767 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feb645', endColorstr='#f1e767',GradientType=1 );
+  
 }
 
-mybot .bot_profile .bot_name{
+widgetbalesin .bot_profile .bot_name{
   display: flex;
   padding: 10px;
   min-height: 50px;
   justify-content: space-between;
 }
 
-mybot .bot_profile .bot_name h4{
-  font-size: 18px;
-  position: relative;
-  bottom: 15px;
-  text-transform: uppercase;
-  vertical-align: middle;
+widgetbalesin .bot_profile .bot_name .nametop{
+  font-size: 18px !important;
+  position: relative !important;
+  bottom: 15px !important;
+  text-transform: uppercase !important;
+  vertical-align: middle !important;
+  font-family: 'Open Sans';
+  color: #333;
+  top: 8px;
+  font-weight: bold;
+  margin: 0;
 }
 
-mybot .bot_p_img {
+widgetbalesin .bot_p_img {
   border-radius: 50%;
   width: 40px;
   border-radius: 50%;
@@ -116,7 +130,7 @@ mybot .bot_p_img {
   border: 1px solid #ccc;
 }
 
-mybot .chatForm {
+widgetbalesin .chatForm {
   position: absolute;
   bottom: -65px;
   right: -1px;
@@ -126,15 +140,15 @@ mybot .chatForm {
   border: 1px solid #dcdcdc;
 }
 
-mybot .bot-txt,
-mybot .bot-txt:focus {
+widgetbalesin .bot-txt,
+widgetbalesin .bot-txt:focus {
   box-shadow: none;
   border-radius: 0;
   height: 66px;
   border: 0;
 }
 
-mybot .resultDiv .botResult {
+widgetbalesin .resultDiv .botResult {
   background: #fff;
   color: #000;
   border-radius: 15px;
@@ -148,37 +162,40 @@ mybot .resultDiv .botResult {
   border: 1px solid #ccc;
   box-shadow: 0px 3px 4px rgba(0,0,0,0.1);
   border-bottom-left-radius: 0px;
-  max-width: 80%;
+  max-width: 65%;
+  text-align: justify;
 }
 
 
-mybot .right-msg {
+widgetbalesin .right-msg {
   flex-direction: row-reverse;
 }
 
-mybot .msg {
+widgetbalesin .msg {
   display: flex;
   align-items: flex-end;
   margin-bottom: 10px;
 }
 
-mybot .msg-img {
+widgetbalesin .msg-img {
   width: 40px;
   height: 40px;
   margin-right: 10px;
-  background: #ddd;
+  background: #fff;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   border-radius: 50%;
+  border: 1px solid #ccc;
+  box-shadow: 0px 3px 4px rgba(0,0,0,0.1);
 }
 
-mybot .msger-inputarea {
+widgetbalesin .msger-inputarea {
   display: flex;
   background: rgb(255, 255, 255);
 }
 
-mybot .msger-send-btn {
+widgetbalesin .msger-send-btn {
   margin-left: 10px;
   color: #fff;
   font-weight: bold;
@@ -188,20 +205,23 @@ mybot .msger-send-btn {
   border: 0;
 }
 
-mybot .right-msg .msg-img {
+widgetbalesin .right-msg .msg-img {
   margin: 0 0 0 10px;
 }
 
-mybot .right-msg .msg-bubble {
+widgetbalesin .right-msg .msg-bubble {
   background: var(--right-msg-bg);
   color: rgb(0, 0, 0);
   border-bottom-right-radius: 0;
   background-color: #ffdd00;
   border: 0px;
+  border: 1px solid #ccc;
+  box-shadow: 0px 3px 4px rgba(0,0,0,0.1);
+  text-align: justify;
 }
 
-mybot .msg-bubble {
-  max-width: 80%;
+widgetbalesin .msg-bubble {
+  max-width: 65%;
   padding: 15px;
   border-radius: 15px;
   background: var(--left-msg-bg);
@@ -209,7 +229,7 @@ mybot .msg-bubble {
   border: 0.5px solid gray;
 }
 
-mybot .resultDiv .userEnteredText {
+widgetbalesin .resultDiv .userEnteredText {
   background: #ffdd00;
   float: right;
   color: #333;
@@ -223,25 +243,25 @@ mybot .resultDiv .userEnteredText {
   margin-top: 5px;
   word-wrap: break-word;
   border-bottom-right-radius: 0px;
-  max-width: 80%;
+  max-width: 65%;
 }
 
 
-mybot .profile_div {
+widgetbalesin .profile_div {
   position: fixed;
   bottom: 10px;
   right: 25px;
   cursor: pointer;
 }
 
-mybot .img-profile {
+widgetbalesin .img-profile {
   width: 65px;
   box-shadow: 0 0px 1px 0 rgba(0,0,0,0.16), 0 0px 10px 0 rgba(0,0,0,0.12);
   background: white;
   border-radius: 50px;
 }
 
-mybot .col-hgt {
+widgetbalesin .col-hgt {
   height: 100px;
   display: flex;
   align-items: center;
@@ -249,13 +269,13 @@ mybot .col-hgt {
   margin-right: 10px;
 }
 
-mybot .chat-txt {
+widgetbalesin .chat-txt {
   box-shadow: 0 0px 1px 0 rgba(0,0,0,0.16),0 0px 10px 0 rgba(0,0,0,0.12);
   padding: 15px 15px;
   border-radius: 50px;
 }
 
-mybot .powered-widget{
+widgetbalesin .powered-widget{
   top: -25px;
   margin: 0 auto;
   height: 30px;
@@ -266,32 +286,22 @@ mybot .powered-widget{
 }
 
 /* Spinner start */
-mybot .spinner {
-background: #ffdd00;
-width: 70px;
-text-align: center;
-display: none;
-border-radius: 4px;
-position: absolute;
-top: -30px;
-left: 19px;
-padding: 7px 10px;
-border-top-left-radius: 0;
-}
-
-mybot .spinner:before {
-  content: "";
+widgetbalesin .spinner {
+  background: #fff;
+  width: 70px;
+  text-align: center;
+  display: none;
+  border-radius: 15px;
   position: absolute;
-  width: 0;
-  height: 0;
-  border-top: 0px solid rgba(0, 0, 0, 0);
-  border-bottom: 15px solid rgba(0, 0, 0, 0);
-  border-right: 15px solid #ffdd00;
-  left: -15px;
-  margin-top: -7px;
+  top: -35px;
+  left: 19px;
+  padding: 7px 10px;
+  border-bottom-left-radius: 0;
+  border: 1px solid #ccc;
+  box-shadow: 0px 3px 4px rgba(0,0,0,0.1);
 }
 
-mybot .spinner > div {
+widgetbalesin .spinner > div {
   width: 10px;
   height: 10px;
   background-color: #333;
@@ -302,12 +312,12 @@ mybot .spinner > div {
   margin-right: 5px;
 }
 
-mybot .spinner .bounce1 {
+widgetbalesin .spinner .bounce1 {
   -webkit-animation-delay: -0.32s;
   animation-delay: -0.32s;
 }
 
-mybot .spinner .bounce2 {
+widgetbalesin .spinner .bounce2 {
   -webkit-animation-delay: -0.16s;
   animation-delay: -0.16s;
 }
@@ -330,7 +340,7 @@ mybot .spinner .bounce2 {
 
 
 /* Suggestions */
-mybot .suggestion {
+widgetbalesin .suggestion {
   background: #fff;
   color: #000;
   border-radius: 3px;
@@ -347,17 +357,16 @@ mybot .suggestion {
   position: relative;
 }
 
-mybot .botResponses{
+widgetbalesin .botResponses{
   display: flex;
   align-items: flex-end;
-  margin-bottom: 10px;
 }
 
-mybot .rightResponse{
+widgetbalesin .rightResponse{
   flex-direction: row-reverse;
 }
 
-mybot .botResponses .botImg{
+widgetbalesin .botResponses .botImg{
   width: 40px;
   height: 40px;
   margin-right: 10px;
@@ -371,7 +380,7 @@ mybot .botResponses .botImg{
   box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
 }
 
-mybot .suggestion:before {
+widgetbalesin .suggestion:before {
   content: "";
   position: absolute;
   width: 0;
@@ -383,24 +392,31 @@ mybot .suggestion:before {
   margin-top: -12px;
 }
 
-mybot .msg-info {
+widgetbalesin .botresponses .msg-info {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  margin-bottom: 10px;
 }
 
-mybot .msg-info {
+widgetbalesin .msg-info {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+widgetbalesin .msg-info {
   font-size: 10px;
+  color: #888;
+  margin-top: 5px;
 }
 
-mybot .msg-info-name {
+widgetbalesin .msg-info-name {
   margin-right: 10px;
   font-weight: bold;
   font-size: 12px;
 }
 
-mybot .suggestion .sugg-options {
+widgetbalesin .suggestion .sugg-options {
   display: block;
   background: #9c27b0;
   color: #fff;
@@ -413,13 +429,13 @@ mybot .suggestion .sugg-options {
   font-weight: 300;
 }
 
-mybot .suggestion .sugg-title {
+widgetbalesin .suggestion .sugg-title {
   font-size: 15px;
   font-weight: 300;
   margin-bottom: 10px;
 }
 
-mybot .suggestion span:last-child {
+widgetbalesin .suggestion span:last-child {
   margin-bottom: 0;
 }
 /* Suggestions end */
@@ -445,18 +461,18 @@ mybot .suggestion span:last-child {
 
 
 @media screen and (max-width: 500px) {
-  mybot .resultDiv .userEnteredText,
-  mybot .resultDiv .botResult,
-  mybot .suggestion {
+  widgetbalesin .resultDiv .userEnteredText,
+  widgetbalesin .resultDiv .botResult,
+  widgetbalesin .suggestion {
     width: 90%;
     margin-bottom: 20px;
   }
-  mybot .chatCont,
-  mybot .chatForm {
+  widgetbalesin .chatCont,
+  widgetbalesin .chatForm {
     width: 100%;
   }
-  mybot .chatCont {
+  widgetbalesin .chatCont {
     height: 92% !important;
   }
 }
-/* MyBot end */
+/* widgetbalesin end */
